enable oauth token with full api access, move shared components to core package
